--- a/COVID_CO2_tracker/package.json
+++ b/COVID_CO2_tracker/package.json
@@ -11,9 +11,13 @@
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "turbolinks": "^5.2.0",
     "typescript": "^4.1.5",
     "webpack": "^5.21.2"
