--- a/COVID_CO2_tracker/package.json
+++ b/COVID_CO2_tracker/package.json
@@ -8,7 +8,6 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.2.1",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -21,8 +20,7 @@
     "react-router-dom": "^5.2.0",
     "turbolinks": "^5.2.0",
     "typescript": "^4.1.5",
-    "webpack": "^5.21.2",
-    "webpack-cli": "^4.5.0"
+    "webpack": "^5.21.2"
   },
   "version": "0.1.0",
   "devDependencies": {
