hmm, try react_on_rails from shakacode

--- a/COVID_CO2_tracker/config/database.yml
+++ b/COVID_CO2_tracker/config/database.yml
@@ -22,4 +22,9 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: db/production
+  adapter: postgresql
+  username:
+  password:
+  host: localhost
+
