--- a/COVID_CO2_tracker/config/webpacker.yml
+++ b/COVID_CO2_tracker/config/webpacker.yml
@@ -33,6 +33,8 @@ default: &default
     - .woff2
 
   extensions:
+    - .tsx
+    - .ts
     - .jsx
     - .mjs
     - .js
@@ -58,7 +60,7 @@ development:
     host: localhost
     port: 3035
     public: localhost:3035
-    hmr: false
+    hmr: true
     # Inline should be set to true if using HMR
     inline: true
     overlay: true
