--- a/COVID_CO2_tracker/package.json
+++ b/COVID_CO2_tracker/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "@babel/core": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
-    "@babel/preset-typescript": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.16",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -18,10 +18,12 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-on-rails": "12.0.4",
     "react-router-dom": "^5.2.0",
     "turbolinks": "^5.2.0",
     "typescript": "^4.1.5",
-    "webpack": "^5.21.2"
+    "webpack": "^5.21.2",
+    "webpack-merge": "^5.7.3"
   },
   "version": "0.1.0",
   "devDependencies": {
