Revert "hmm, try react_on_rails from shakacode"
This reverts commit dc4275f599a8f17908df81642019428ed45ee5c3.

--- a/COVID_CO2_tracker/config/database.yml
+++ b/COVID_CO2_tracker/config/database.yml
@@ -22,9 +22,4 @@ test:
 
 production:
   <<: *default
-  database: db/production
-  adapter: postgresql
-  username:
-  password:
-  host: localhost
-
+  database: db/production.sqlite3
