--- a/COVID_CO2_tracker/config/webpacker.yml
+++ b/COVID_CO2_tracker/config/webpacker.yml
@@ -33,8 +33,6 @@ default: &default
     - .woff2
 
   extensions:
-    - .tsx
-    - .ts
     - .jsx
     - .mjs
     - .js
@@ -60,7 +58,7 @@ development:
     host: localhost
     port: 3035
     public: localhost:3035
-    hmr: true
+    hmr: false
     # Inline should be set to true if using HMR
     inline: true
     overlay: true
