--- a/COVID_CO2_tracker/package.json
+++ b/COVID_CO2_tracker/package.json
@@ -2,10 +2,14 @@
   "name": "covid-co2-tracker",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.13",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
@@ -13,14 +17,10 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-<<<<<<< HEAD
     "react-router-dom": "^5.2.0",
     "turbolinks": "^5.2.0",
     "typescript": "^4.1.5",
     "webpack": "^5.21.2"
-=======
-    "turbolinks": "^5.2.0"
->>>>>>> parent of f53f6bb (add typescript)
   },
   "version": "0.1.0",
   "devDependencies": {
