--- a/COVID_CO2_TRACKER/co2_client/package.json
+++ b/COVID_CO2_TRACKER/co2_client/package.json
@@ -13,7 +13,9 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.7",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
