--- a/COVID_CO2_TRACKER/co2_client/package.json
+++ b/COVID_CO2_TRACKER/co2_client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@reduxjs/toolkit": "^1.2.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -14,9 +15,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.1.7",
-    "bootstrap": "^4.6.0",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.0",
     "react-router-bootstrap": "^0.25.0",
