snuff out a few more

--- a/COVID_CO2_TRACKER/Gemfile
+++ b/COVID_CO2_TRACKER/Gemfile
@@ -40,6 +40,6 @@ end
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
-gem "rbnacl", "~> 7.1"
+gem 'rbnacl', '~> 7.1'
 
-gem "jwt", "~> 2.2"
+gem 'jwt', '~> 2.2'
