--- a/COVID_CO2_TRACKER/Gemfile
+++ b/COVID_CO2_TRACKER/Gemfile
@@ -1,4 +1,7 @@
+# frozen_string_literal: true
+
 source 'https://rubygems.org'
+
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
 ruby '3.0.0'
