Build out create model flow

--- a/COVID_CO2_TRACKER/Gemfile
+++ b/COVID_CO2_TRACKER/Gemfile
@@ -34,6 +34,7 @@ end
 group :development do
   # Use sqlite3 as the database for Active Record
   gem 'sqlite3', '~> 1.4'
+  gem 'rails-erd'
 end
 
 group :production do
