partial migration to postgresql
FUCKING HOURS DEALING WITH pg INCOMPATIBILITY WITH ruby 3

--- a/COVID_CO2_TRACKER/Gemfile
+++ b/COVID_CO2_TRACKER/Gemfile
@@ -33,13 +33,13 @@ end
 
 group :development do
   # Use sqlite3 as the database for Active Record
-  gem 'sqlite3', '~> 1.4'
+  # gem 'sqlite3', '~> 1.4'
   gem 'rails-erd'
 end
 
-group :production do
-  gem 'pg'
-end
+# group :production do
+gem 'pg'
+# end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
