--- a/COVID_CO2_TRACKER/config/database.yml
+++ b/COVID_CO2_TRACKER/config/database.yml
@@ -5,21 +5,30 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: co2tracker_development
+  host: localhost
+  # username: <%= Rails.application.credentials.development![:postgres_username] %>
+  username: postgres
+  password: <%= Rails.application.credentials.development![:postgres_password] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: co2tracker_test
+  host: localhost
+  # username: <%= Rails.application.credentials.development![:postgres_username] %>
+  username: postgres
+  password: <%= Rails.application.credentials.development![:postgres_password] %>
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: co2tracker_production
