setup querying places from backed, fix autocomplete load error, fix refresh place info

--- a/COVID_CO2_TRACKER/Gemfile
+++ b/COVID_CO2_TRACKER/Gemfile
@@ -48,3 +48,7 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'rbnacl', '~> 7.1'
 
 gem 'jwt', '~> 2.2'
+
+
+# Open source is wonderful.
+gem 'google_places'
