--- a/COVID_CO2_TRACKER/co2_client/package.json
+++ b/COVID_CO2_TRACKER/co2_client/package.json
@@ -21,7 +21,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
-    "react-google-login": "^5.2.2",
+    "react-google-one-tap-login": "^0.0.8",
     "react-redux": "^7.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
