--- a/co2_client/public/manifest.json
+++ b/co2_client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "COVID CO2 tracker",
+  "name": "COVID CO2 tracker",
   "icons": [
     {
       "src": "favicon.ico",
