--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -26,7 +26,8 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "typescript": "~3.8.2"
+    "typescript": "~3.8.2",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
