--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-bootstrap": "^0.32.25",
+    "@types/react-datepicker": "^3.1.8",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-bootstrap": "^0.24.5",
@@ -20,6 +21,7 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
+    "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.0",
