--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^1.5.0",
     "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.1",
+    "react-error-boundary": "^3.1.1",
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.0",
     "react-router-bootstrap": "^0.25.0",
