--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@react-google-maps/api": "^2.1.1",
     "@reduxjs/toolkit": "^1.2.5",
+    "@sentry/react": "^6.3.3",
+    "@sentry/tracing": "^6.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
