begin translation work

--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
         "build": "yarn --cwd co2_client install && yarn --cwd co2_client build",
         "deploy": "cp -a co2_client/build/. public/",
         "heroku-postbuild": "yarn build && yarn deploy"
+    },
+    "dependencies": {
+        "i18next": "^20.2.4",
+        "i18next-browser-languagedetector": "^6.1.1",
+        "i18next-http-backend": "^1.2.4",
+        "react-i18next": "^11.8.15"
     }
 }
