force update a few dependencies

--- a/co2_client/tsconfig.json
+++ b/co2_client/tsconfig.json
@@ -6,7 +6,9 @@
       "dom.iterable",
       "esnext"
     ],
-    "types": ["googlemaps"],
+    "types": [
+      "googlemaps"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -19,7 +21,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react-jsx"
   },
   "include": [
     "src"
