--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.2.0",
     "@react-google-maps/api": "^2.1.1",
     "@reduxjs/toolkit": "^1.6.1",
     "@sentry/react": "^6.11.0",
@@ -34,10 +35,12 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "react-scripts eject",
+    "postbuild": "purgecss --css build/static/css/*.css --content build/index.html build/static/js/*.js --output build/static/css"
+
   },
   "eslintConfig": {
     "extends": "react-app"
