--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "7.12.3",
     "@craco/craco": "^6.2.0",
+    "@fullhuman/postcss-purgecss": "^4.0.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@react-google-maps/api": "^2.1.1",
     "@reduxjs/toolkit": "^1.6.1",
@@ -169,5 +170,9 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "glob-all": "^3.2.1",
+    "purgecss-webpack-plugin": "^4.0.3"
   }
 }
