--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -31,6 +31,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "serve": "^12.0.0",
     "typescript": "~4.3.5",
     "web-vitals": "^2.1.0"
   },
@@ -40,7 +41,6 @@
     "test": "craco test",
     "eject": "react-scripts eject",
     "postbuild": "purgecss --css build/static/css/*.css --content build/index.html build/static/js/*.js --output build/static/css"
-
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -57,5 +57,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3000"
+  "proxy": "http://localhost:3000",
+  "devDependencies": {
+    "glob-all": "^3.2.1",
+    "purgecss-webpack-plugin": "^4.0.3"
+  }
 }
