--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -21,6 +21,7 @@
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.1.8",
     "bootstrap": "^5.1.0",
+    "purgecss": "^4.0.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.1",
     "react-datepicker": "^4.1.1",
