--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -27,7 +27,7 @@
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.0",
-    "react-router-bootstrap": "^0.25.0",
+    "react-router-bootstrap": "0.26.0-beta.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "typescript": "~4.3.5",
