--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -21,11 +21,15 @@
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.3.2",
     "bootstrap": "^5.1.3",
+    "i18next": "^21.6.0",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-i18next": "^11.15.0",
     "react-redux": "^7.2.6",
     "react-router-bootstrap": "0.26.0-beta.2",
     "react-router-dom": "^6.0.2",
