--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -20,6 +20,7 @@
     "@types/react-redux": "^7.1.20",
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.3.2",
+    "@types/web-bluetooth": "^0.0.11",
     "bootstrap": "^5.1.3",
     "i18next": "^21.6.0",
     "i18next-browser-languagedetector": "^6.1.2",
