--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -22,6 +22,7 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/web-bluetooth": "^0.0.11",
     "bootstrap": "^5.1.3",
+    "bowser": "^2.11.0",
     "i18next": "^21.6.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
