--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -1,21 +1,24 @@
 {
   "name": "co_native_client",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
+    "@config-plugins/react-native-ble-plx": "^0.0.2",
     "expo": "~44.0.0",
+    "expo-dev-client": "~0.8.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-ble-plx": "^2.0.3",
+    "react-native-web": "0.17.1",
+    "expo-splash-screen": "~0.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
