--- a/co2_native_client/app.json
+++ b/co2_native_client/app.json
@@ -26,7 +26,8 @@
       },
       "permissions": [
         "android.permission.BLUETOOTH",
-        "android.permission.BLUETOOTH_ADMIN"
+        "android.permission.BLUETOOTH_ADMIN",
+        "android.permission.ACCESS_FINE_LOCATION"
       ],
       "package": "riccio.co2.client"
     },
