--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -12,6 +12,7 @@
     "@config-plugins/react-native-ble-plx": "^0.0.2",
     "@reduxjs/toolkit": "^1.7.1",
     "expo": "~44.0.0",
+    "expo-application": "^4.0.1",
     "expo-auth-session": "~3.5.0",
     "expo-dev-client": "~0.8.0",
     "expo-random": "~12.1.1",
