--- a/co2_native_client/android/app/build.gradle
+++ b/co2_native_client/android/app/build.gradle
@@ -124,6 +124,14 @@ def jscFlavor = 'org.webkit:android-jsc:+'
 def enableHermes = project.ext.react.get("enableHermes", false);
 
 android {
+
+// I AM ABOUT TO LOSE MY FUCKING MIND
+//https://stackoverflow.com/a/20701110/625687
+  lintOptions {
+      abortOnError false
+      checkReleaseBuilds false
+  }
+
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     compileOptions {
