--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@config-plugins/react-native-ble-plx": "^0.0.2",
     "@reduxjs/toolkit": "^1.7.1",
+    "buffer": "^6.0.3",
     "expo": "~44.0.0",
     "expo-application": "^4.0.1",
     "expo-auth-session": "~3.5.0",
