--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -33,7 +33,7 @@
     "react-google-login": "^5.2.2",
     "react-i18next": "^11.15.0",
     "react-redux": "^7.2.6",
-    "react-router-bootstrap": "0.26.0-beta.2",
+    "react-router-bootstrap": "0.26.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "typescript": "~4.5.2",
