--- a/co2_client/tsconfig.json
+++ b/co2_client/tsconfig.json
@@ -7,7 +7,11 @@
       "esnext"
     ],
     "types": [
-      "googlemaps"
+      "googlemaps",
+      "jest",
+
+      // https://stackoverflow.com/a/61636112/625687
+      "@testing-library/jest-dom"
     ],
     "allowJs": true,
     "skipLibCheck": true,
