switch from deprecated @types/googlemaps to @types/google.maps

--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -10,7 +10,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "@types/googlemaps": "^3.43.3",
+    "@types/google.maps": "^3.47.3",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.10",
     "@types/react": "^17.0.36",
