--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -23,6 +23,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-ble-plx": "^2.0.3",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6"
   },
