--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -17,6 +17,7 @@
     "expo-auth-session": "~3.5.0",
     "expo-dev-client": "~0.8.0",
     "expo-random": "~12.1.1",
+    "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
@@ -31,10 +32,19 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "eslint": "^8.8.0",
+    "eslint-config-universe": "^10.0.0",
+    "jshint": "2.13.4",
+    "prettier": "^2.5.1",
     "typescript": "~4.3.5"
   },
   "private": true,
   "resolutions": {
     "react-devtools-core": "<4.11.0"
+  },
+  "eslintConfig": {
+    "extends": "universe/native"
   }
 }
