--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -30,12 +30,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@eslint/create-config": "^0.1.2",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "^8.8.0",
     "eslint-config-universe": "^10.0.0",
+    "eslint-plugin-react": "^7.28.0",
     "jshint": "2.13.4",
     "prettier": "^2.5.1",
     "typescript": "~4.3.5"
@@ -43,8 +45,5 @@
   "private": true,
   "resolutions": {
     "react-devtools-core": "<4.11.0"
-  },
-  "eslintConfig": {
-    "extends": "universe/native"
   }
 }
