--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -16,6 +16,7 @@
     "expo-application": "^4.0.1",
     "expo-auth-session": "~3.5.0",
     "expo-dev-client": "~0.8.0",
+    "expo-device": "~4.1.0",
     "expo-random": "~12.1.1",
     "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
