--- a/co2_native_client/android/app/src/main/AndroidManifest.xml
+++ b/co2_native_client/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
   <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
   <uses-permission android:name="android.permission.VIBRATE"/>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+<!-- For foreground service, need both? -->
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/> 
+  <uses-permission android:name="android.permission.WAKE_LOCK" />
   <queries>
     <intent>
       <action android:name="android.intent.action.VIEW"/>
@@ -40,5 +44,7 @@
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity"/>
+    <service android:name="com.riccio.co2.client.foregroundservice" android:label="CO2 tracker background uploader"></service>
+    <service android:name="com.riccio.co2.client.foregroundservicetask"></service>
   </application>
 </manifest>
