--- a/co2_native_client/app.json
+++ b/co2_native_client/app.json
@@ -40,7 +40,8 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "@config-plugins/react-native-ble-plx"
+      "@config-plugins/react-native-ble-plx",
+      "@notifee/react-native"
     ]
   }
 }
