--- a/co2_native_client/android/app/src/main/AndroidManifest.xml
+++ b/co2_native_client/android/app/src/main/AndroidManifest.xml
@@ -28,8 +28,8 @@
     <meta-data android:name="expo.modules.updates.EXPO_UPDATES_CHECK_ON_LAUNCH" android:value="ALWAYS"/>
     <meta-data android:name="expo.modules.updates.EXPO_UPDATES_LAUNCH_WAIT_MS" android:value="0"/>
     <meta-data android:name="expo.modules.updates.EXPO_UPDATE_URL" android:value="https://exp.host/@ariccio/co2_native_client"/>
-    <service android:name="com.riccio.co2.client.foregroundservice" android:label="CO2 tracker background uploader"/>
-    <service android:name="com.riccio.co2.client.foregroundservicetask"/>
+    <service android:name="com.riccio.co2.client.foregroundservice" android:label="CO2 tracker background uploader" android:foregroundServiceType="connectedDevice|dataSync|location"/>
+    <service android:name="com.riccio.co2.client.foregroundservicetask" android:foregroundServiceType="connectedDevice|dataSync|location"/>
     <activity android:name=".MainActivity" android:label="@string/app_name" android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode" android:launchMode="singleTask" android:windowSoftInputMode="adjustResize" android:theme="@style/Theme.App.SplashScreen" android:screenOrientation="portrait">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
