--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -12,6 +12,7 @@
     "@config-plugins/react-native-ble-plx": "^0.0.2",
     "@notifee/react-native": "^3.0.4",
     "@reduxjs/toolkit": "^1.7.1",
+    "big-integer": "^1.6.51",
     "buffer": "^6.0.3",
     "expo": "~44.0.0",
     "expo-application": "^4.0.1",
