--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -6,8 +6,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "postinstall": "patch-package"
+    "eject": "expo eject"
   },
   "dependencies": {
     "@config-plugins/react-native-ble-plx": "^0.0.2",
