--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/preset-typescript": "^7.16.7",
     "@eslint/create-config": "^0.1.2",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
@@ -40,7 +41,12 @@
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "^8.8.0",
     "eslint-config-universe": "^10.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-native": "^4.0.0",
+    "eslint-plugin-react-native-globals": "^0.1.2",
+    "eslint-plugin-react-perf": "^3.3.1",
     "jshint": "2.13.4",
     "prettier": "^2.5.1",
     "typescript": "~4.3.5"
