--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -29,7 +29,8 @@
     "react-native-ble-plx": "^2.0.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-web": "0.17.1",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "sentry-expo": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
