--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -12,17 +12,20 @@
     "@config-plugins/react-native-ble-plx": "^0.0.2",
     "@notifee/react-native": "^4.1.0",
     "@reduxjs/toolkit": "^1.7.1",
+    "@sentry/react-native": "^3.3.0",
     "big-integer": "^1.6.51",
     "buffer": "^6.0.3",
     "expo": "~44.0.0",
-    "expo-application": "^4.0.1",
+    "expo-application": "~4.0.1",
     "expo-auth-session": "~3.5.0",
+    "expo-constants": "~13.0.1",
     "expo-dev-client": "~0.8.0",
     "expo-device": "~4.1.0",
     "expo-random": "~12.1.1",
     "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
