--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -26,12 +26,13 @@
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "17.0.2",
+    "react-devtools-core": "4.23.0",
+    "react-dom": "17.0.2",
     "react-native": "0.64.3",
     "react-native-ble-plx": "^2.0.3",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-web": "0.17.1",
+    "react-native-safe-area-context": "^4.1.2",
+    "react-native-web": "0.17.7",
     "react-redux": "^7.2.6",
     "sentry-expo": "^4.0.0"
   },
@@ -53,7 +54,7 @@
     "eslint-plugin-react-perf": "^3.3.1",
     "jshint": "2.13.4",
     "prettier": "^2.5.1",
-    "typescript": "~4.3.5"
+    "typescript": "~4.6.2"
   },
   "private": true,
   "resolutions": {
