--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -12,7 +12,7 @@
     "@config-plugins/react-native-ble-plx": "^0.0.2",
     "@notifee/react-native": "^4.1.0",
     "@reduxjs/toolkit": "^1.7.1",
-    "@sentry/react-native": "^3.3.0",
+    "@sentry/react-native": "^3.3.2",
     "big-integer": "^1.6.51",
     "buffer": "^6.0.3",
     "expo": "~44.0.0",
@@ -25,7 +25,8 @@
     "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
+    "expo-updates": "^0.11.6",
+    "react": "17.0.2",
     "react-devtools-core": "4.23.0",
     "react-dom": "17.0.2",
     "react-native": "0.64.3",
@@ -39,11 +40,11 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-typescript": "^7.16.7",
     "@eslint/create-config": "^0.1.2",
-    "@types/react": "~17.0.21",
+    "@types/react": "~17.0.40",
     "@types/react-native": "~0.64.12",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
-    "eslint": "^8.8.0",
+    "eslint": "^8.11.0",
     "eslint-config-universe": "^10.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.28.0",
