--- a/co2_native_client/android/app/src/main/AndroidManifest.xml
+++ b/co2_native_client/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="ariccio.co2_native_client">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.ariccio.co2_native_client">
   <uses-permission-sdk-23 android:name="android.permission.ACCESS_FINE_LOCATION"/>
   <uses-permission android:name="android.hardware.bluetooth_le"/>
   <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
