--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -54,6 +54,8 @@
     "eslint-plugin-react-perf": "^3.3.1",
     "jshint": "2.13.4",
     "prettier": "^2.5.1",
+    "standard-version": "^9.3.2",
+    "standard-version-expo": "^1.0.3",
     "typescript": "~4.6.2"
   },
   "private": true,
