--- a/co2_native_client/app.json
+++ b/co2_native_client/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "co2_native_client",
     "slug": "co2_native_client",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -17,7 +17,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "buildNumber": "1.0.1"
     },
     "android": {
       "adaptiveIcon": {
@@ -33,7 +34,8 @@
         "android.permission.ACCESS_COARSE_LOCATION",
         "android.permission.ACCESS_BACKGROUND_LOCATION",
         "android.hardware.bluetooth_le"
-      ]
+      ],
+      "versionCode": 440010001
     },
     "web": {
       "favicon": "./assets/favicon.png"
