swap package name and creds

--- a/co2_native_client/android/app/build.gradle
+++ b/co2_native_client/android/app/build.gradle
@@ -134,7 +134,7 @@ android {
 
 // Note to self: https://github.com/ariccio/COVID-CO2-tracker/compare/3b775b2b492c07a776dd71a984b0afad75d32625...main
     defaultConfig {
-        applicationId 'riccio.co2.client'
+        applicationId 'com.ariccio.co2_native_client'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 440010009
