use react 18, update react-redux for compatibility! Also silence warns
Selectors are broken with old react-redux!

--- a/co2_native_client/.eslintrc.json
+++ b/co2_native_client/.eslintrc.json
@@ -27,7 +27,9 @@
         "promise",
         "react-native",
         "react-native-globals",
-        "react-perf"
+        "react-perf",
+        "jsx-a11y"
+
     ],
     "rules": {
         "prettier/prettier": 0,
