--- a/co2_client/package.json
+++ b/co2_client/package.json
@@ -32,7 +32,7 @@
     "react-dom": "^18.0.0",
     "react-google-login": "^5.2.2",
     "react-i18next": "^11.15.0",
-    "react-redux": "^7.2.6",
+    "react-redux": "8.0.0-beta.3",
     "react-router-bootstrap": "0.26.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.0",
@@ -63,6 +63,7 @@
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "eslint": "^8.12.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react-perf": "^3.3.1"
   }
 }
