--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -52,6 +52,7 @@
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "^8.11.0",
     "eslint-config-universe": "^10.0.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
