--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-native": "^4.0.0",
+    "eslint-plugin-react-native-a11y": "^3.2.1",
     "eslint-plugin-react-native-globals": "^0.1.2",
     "eslint-plugin-react-perf": "^3.3.1",
     "jshint": "2.13.4",
