fix android build

--- a/co2_native_client/android/app/build.gradle
+++ b/co2_native_client/android/app/build.gradle
@@ -1,7 +1,8 @@
+
 apply plugin: "com.android.application"
 
 import com.android.build.OutputFile
-import io.sentry.android.gradle.InstrumentationFeature
+// import io.sentry.android.gradle.InstrumentationFeature
 
 /**
  * The react.gradle file registers a task for each build variant (e.g. bundleDebugJsAndAssets
@@ -77,6 +78,8 @@ import io.sentry.android.gradle.InstrumentationFeature
  *   extraPackagerArgs: []
  * ]
  */
+
+
 
 project.ext.react = [
     enableHermes: (findProperty('expo.jsEngine') ?: "jsc") == "hermes",
@@ -252,18 +255,8 @@ apply from: new File(["node", "--print", "require.resolve('@react-native-communi
 applyNativeModulesAppBuildGradle(project)
 
 
-// https://docs.sentry.io/platforms/android/gradle/
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-}
-
-plugins {
-    id "io.sentry.android.gradle" version "3.0.1"
-}
 
 
-sentry {
-    uploadNativeSymbols = true
-}
+// sentry {
+//     uploadNativeSymbols = true
+// }
