(useless) run react-native-create-bridge for broadcast receiver
Had to patch it like so:
https://github.com/peggyrayzis/react-native-create-bridge/issues/68#issuecomment-778709235

No files got created?

--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -35,6 +35,7 @@
     "react-native": "0.64.3",
     "react-native-alert-async": "^1.0.5",
     "react-native-ble-plx": "^2.0.3",
+    "react-native-create-bridge": "^2.0.1",
     "react-native-pager-view": "^5.4.15",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
