--- a/co2_native_client/android/gradle.properties
+++ b/co2_native_client/android/gradle.properties
@@ -1,5 +1,14 @@
 # Project-wide Gradle settings.
 
+
+
+// https://stackoverflow.com/questions/29977196/how-can-i-make-gradle-stacktrace-the-default#comment63547830_29983737
+org.gradle.startParameter.showStacktrace = org.gradle.api.logging.configuration.ShowStacktrace.ALWAYS_FULL
+org.gradle.logging.level=debug
+org.gradle.warning.mode=all
+org.gradle.console=verbose
+
+
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
