Ok, may have found the issue, also debug logging generates way too much to view

--- a/co2_native_client/android/app/build.gradle
+++ b/co2_native_client/android/app/build.gradle
@@ -171,10 +171,10 @@ android {
             minifyEnabled 
             enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-            ndk {
-                debugSymbolLevel 'full'
-                jobs 4
-            }
+            // ndk {
+            //     debugSymbolLevel 'full'
+            //     jobs 4
+            // }
         }
     }
 
