--- a/co2_native_client/android/gradle.properties
+++ b/co2_native_client/android/gradle.properties
@@ -4,9 +4,9 @@
 
 // https://stackoverflow.com/questions/29977196/how-can-i-make-gradle-stacktrace-the-default#comment63547830_29983737
 org.gradle.startParameter.showStacktrace = org.gradle.api.logging.configuration.ShowStacktrace.ALWAYS_FULL
-org.gradle.logging.level=debug
+org.gradle.logging.level=warn
 org.gradle.warning.mode=all
-org.gradle.console=verbose
+# org.gradle.console=verbose
 
 
 # IDE (e.g. Android Studio) users:
