fix java package declarations?
Test device saw app crash on start. Saw this:

```
java.lang.RuntimeException: Unable to instantiate receiver riccio.co2.client.BootUpReceiver: java.lang.ClassNotFoundException: Didn't find class "riccio.co2.client.BootUpReceiver" on path: DexPathList[...long args...]
[...stack...]
Caused by: java.lang.ClassNotFoundException: Didn't find class "riccio.co2.client.BootUpReceiver" on path: DexPathList[...long args...]

```
Pulled ADB from device with `adb shell pm path riccio.co2.client` then `adb pull /data/app/riccio.co2.client-jkvAH03NbD_1SJ6DooSBBg==/base.apk` to a `inspect_co2_tracker_apk` dir in documents, opened it in Android Studio, which showed `BootUpHandlerService` and `BootUpReceiver

Problem likely an issue with package declarations in java files (fucking java):
https://stackoverflow.com/questions/36154340/android-missing-package-statement-activity-class-does-not-exist

--- a/co2_native_client/android/app/src/main/AndroidManifest.xml
+++ b/co2_native_client/android/app/src/main/AndroidManifest.xml
@@ -30,8 +30,8 @@
     <meta-data android:name="expo.modules.updates.EXPO_UPDATE_URL" android:value="https://exp.host/@ariccio/co2_native_client"/>
     <service android:name="riccio.co2.client.foregroundservice" android:label="CO2 tracker background uploader" android:foregroundServiceType="connectedDevice|dataSync|location"/>
     <service android:name="riccio.co2.client.foregroundservicetask" android:foregroundServiceType="connectedDevice|dataSync|location"/>
-    <service android:name="riccio.co2.client.BootUpHandlerService"/>
-    <receiver android:name="riccio.co2.client.BootUpReceiver" android:enabled="true" android:exported="true" android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
+    <service android:name="riccio.co2.client.androidreactnativebootreceiver.BootUpHandlerService"/>
+    <receiver android:name="riccio.co2.client.androidreactnativebootreceiver.BootUpReceiver" android:enabled="true" android:exported="true" android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
       <intent-filter>
         <action android:name="android.intent.action.BOOT_COMPLETED"/>
         <category android:name="android.intent.category.DEFAULT"/>
