maybe fix, but my local pc is currently unstable and rails not working?!?

--- a/config/database.yml
+++ b/config/database.yml
@@ -16,6 +16,7 @@ development:
   host: localhost
   username: postgres
   password: <%= Rails.application.credentials.dig(:development, :postgres_password) %>
+  timeout: 1000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
