fix android bug

--- a/co2_native_client/.eslintrc.json
+++ b/co2_native_client/.eslintrc.json
@@ -38,6 +38,7 @@
         "prettier/prettier": 0,
         // "quotes": [0, "single"],
         "react/react-in-jsx-scope": "off",
-        "react-perf/jsx-no-new-function-as-prop": "off"
+        "react-perf/jsx-no-new-function-as-prop": "off",
+        "no-useless-return": "off"
     }
 }
