generate the dependency manager configuration
https://microsoft.github.io/rnx-kit/docs/guides/getting-started

--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -73,5 +73,20 @@
   "private": true,
   "resolutions": {
     "react-devtools-core": "<4.11.0"
+  },
+  "rnx-kit": {
+    "reactNativeVersion": "^0.68",
+    "kitType": "app",
+    "capabilities": [
+      "babel-preset-react-native",
+      "core",
+      "core-android",
+      "core-ios",
+      "navigation/native",
+      "react",
+      "react-dom",
+      "safe-area",
+      "screens"
+    ]
   }
 }
