switching to hermes fixed a lot of problems!

--- a/co2_native_client/android/app/build.gradle
+++ b/co2_native_client/android/app/build.gradle
@@ -270,6 +270,8 @@ android {
 }
 
 dependencies {
+    implementation'com.facebook.soloader:soloader:0.9.0+'
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     //noinspection GradleDynamicVersion
