--- a/co2_native_client/package.json
+++ b/co2_native_client/package.json
@@ -32,7 +32,7 @@
     "react": "17.0.2",
     "react-devtools-core": "4.23.0",
     "react-dom": "17.0.2",
-    "react-native": "^0.68.0",
+    "react-native": "0.68.2",
     "react-native-alert-async": "^1.0.5",
     "react-native-ble-plx": "^2.0.3",
     "react-native-create-bridge": "^2.0.1",
