--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -10,4 +10,4 @@ jobs:
         # with:
           # bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - name: check validates_timeliness new version
-        uses: ariccio/check_validates_timeliness@should-work-now-lol
+        uses: ariccio/check_validates_timeliness@run-func
